# ad_banner_replacement

./: CMakeLists.txt  README.md  ad_banner_replacement.cpp
code/: ad_banner_replacement.cpp
images/: modric.mov
include/: utils.h
src/: utils.cpp
